  Available in SQL editor's right mouse menu and tools popup (ctrl+T).

#598 Mac OS: Apple's application close command "Command key"+Q now works the same way as Ctrl+Q.
  I.e. Preferences are saved on "Command key"+Q.
  Furthermore the Apple specific About-Command now displays SQuirreL's About-box.
  NOTE: As a consequence of these changes the minimum required is Java 11.



Bug fixes:

#1473 Unsaved changes dialog: Improved layout.
  Thanks to joel3576 for parts of the changes.

Status bar: Fixed background color and improved breadcrumb navigation.

#1351 Clicking X in window "Properties for Alias: ..." is not really closing that window.

Graph Plugin: Copy and paste of Graph with no purely ASCII name raised "SAXParseException ...Invalid byte 2 of 3-byte UTF-8 sequence".

#1468 Single whitespace in driver properties are lost on application restart.
  This fix required replacing outdated nanoxml library by standard Java XML functionality.

#600 (in feature requests): For Oracle DB Sessions keywords in Objects tab weren't sorted correctly because of leading white spaces.

Command line interface (CLI):
  Fixed NullPointer in MetaDataTimeOutProxyFactory when executing SQL.


4.2.0 (04/05/2021)
==================

Enhancements:

Session status bar: Fixed coloring of Schema text field. See Alias properties window --> tab Color.

Option to save changes to Aliases and Drivers immediately (see bug #1456)
  See menu File --> Global Preference --> tab General --> section General on the right
  Warning: May cause performance problems.

Introduced Java 16 compatibility.

#599 DB2 Plugin: New Object tree details tab "DB2 column details" which for DB2 on AS400 among others shows CCSIDs.

Look and feel Plugin: Upgraded FlatLaf Look and Feel to version 1.0.
  Thanks to Stanimir Stamenkov for the patch.

Table right mouse menu item "Show distinct values..." is available in more tables.

Find columns function: Added search in progress indicator and number of tables searched.
