@@ -53,6 +53,9 @@ SQL Scripts Plugin: Create Data (INSERT) file from SQL.
 
 Bug fixes:
 
+#1473 Unsaved changes dialog: Improved layout part two of 5/17/2021.
+  Thanks to joel3576 for the changes.
+
 #1473 Unsaved changes dialog: Improved layout.
   Thanks to joel3576 for parts of the changes.
 
